--- a/index.html
+++ b/index.html
@@ -319,11 +319,10 @@
                 </ul>
             </nav>
 
-            <form class="footer__form" action="https://formspree.io/f/myyokkdb"
-            method="POST"
+            <form class="footer__form" action="https://formspree.io/f/mknkkrkj" method="POST">
                 <h2 class="footer__newsletter">Suscribete a la newsletter</h2>
                 <div class="footer__inputs">
-                    <input type="email" placeholder="Email:" class="footer__input" name="_replyto"
+                    <input type="email" placeholder="Email:" class="footer__input" name="_replyto">
                     <input type="submit" value="Registrate" class="footer__submit">
                 </div>
             </form>
@@ -339,8 +338,10 @@
             <h3 class="footer__copyright">Derechos reservados &copy; Jordan Alexander</h3>
         </section>
     </footer>
+
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
     <script src="./js/menu.js"></script>
 </body>
+
 </html>
